Fixed Search Dropdown positioning on narrow devices
- i.e. i5, i6, n5, n6…

--- a/wp-content/themes/mag-wp/css/colors/default.css
+++ b/wp-content/themes/mag-wp/css/colors/default.css
@@ -2445,6 +2445,10 @@ body #responsive-menu #responsive-menu-title {
 	#searchform .inputUnderline, #searchform .animatedUnderline {
 		width: 50%;
 	}
+	body > ul.dwls_search_results {
+		left: 100px !important;
+		top: 37px !important;
+	}
 	#featured-boxes .wrap-center {
 		width: 100%;
 	}
